--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -35,7 +35,7 @@
                   <% if(editing) { %>
                     <input type="hidden" name="productId" value="<%= product._id %>">
                   <% } %>
-
+                  <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                   <button class="btn" type="submit">
                     <% if(editing) { %>
                       Update Product
